--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -607,6 +607,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_male</th>\n",
+       "      <th>mother_age</th>\n",
+       "      <th>plurality</th>\n",
+       "      <th>gestation_weeks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6132</th>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5986</th>\n",
+       "      <td>0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7682</th>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4910</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      is_male  mother_age  plurality  gestation_weeks\n",
+       "39          1          32          1             41.0\n",
+       "6132        0          28          1             30.0\n",
+       "5986        0          44          1             38.0\n",
+       "7682        0          34          1             38.0\n",
+       "4910        1          31          1             40.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
